--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "babel-preset-vue2",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Babel preset for vue@2.x",
   "main": "index.js",
   "repository": {
@@ -23,6 +23,7 @@
     "@babel/plugin-syntax-jsx": "^7.2.0",
     "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.2.0",
+    "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-loader": "^8.0.4",
     "babel-plugin-inject-polyfills": "^1.0.0",
     "babel-plugin-transform-vue-jsx": "^4.0.1"
